--- a/views/supervisor_dashboard.html
+++ b/views/supervisor_dashboard.html
@@ -287,7 +287,7 @@
 									<div class="input-group input-group-sm">
 										<span class="input-group-addon">Total</span>
 										<input type="number" min="0" required step="0.1" class="form-control"
-										ng-value="{{getTotalPrice(product_selected.variant.entry_price,product_selected.variant.business_percent,product_selected.variant.business_gain, 1) | currency:'$':0}}">
+										ng-value="{{(product_selected.variant.business_price) | currency:'$':0}}">
 									</div>
 							</div>
 						</div>
