Comment field added to create_order

--- a/views/create_order.html
+++ b/views/create_order.html
@@ -135,6 +135,12 @@
 						</div>
 					</div>
 					<div class="row">
+						<div class="col-md-12">
+							<span>Comentario</span>
+							<input type="text" ng-model="cart.comment">
+						</div>
+					</div>
+					<div class="row">
 						<ul class="list-group">
 							<li class="list-group-item" ng-repeat="v in cart.products">
 								<div class="row">
