--- a/views/supervisor_dashboard.html
+++ b/views/supervisor_dashboard.html
@@ -188,6 +188,11 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
+						<h4>Comentario: {{order_selected.order.comment | capitalize}}</h4>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
 						<h4>Productos({{order_selected.products.length}}):</h4>
 					</div>
 				</div>
