--- a/views/shopping_sales.html
+++ b/views/shopping_sales.html
@@ -78,13 +78,8 @@
 			</div>
 			<div class="portlet-body">
 				<div class="table-toolbar">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="btn-group">
-								<input type="date" ng-model="date_target"/>
-								<button ng-click="get_movements(date_target)">Go</button>					
-							</div>
-						</div>
+					<!--div class="row">
+						<div class="col-md-6"></div>
 						<div class="col-md-6">
 							<div class="pagination-control pull-right">
 								<span class="pagination-info"> {{headers.current_page}} of {{headers.pages_count}} page(s)</span>
@@ -96,7 +91,7 @@
 								</a>
 							</div>
 						</div>
-					</div>
+					</div-->
 				</div>
 				<div class="portlet-body flip-scroll">
 					<table class="table table-striped table-bordered table-hover table-checkable order-column flip-content">
