--- a/views/cdd_chooser.html
+++ b/views/cdd_chooser.html
@@ -61,12 +61,12 @@
 					</a>
 				</li>
 				<li>
-					<a ui-sref="supervisor_dashboard123123">
+					<a ui-sref="supervisor_dashboard">
 						<i class="icon-paper-clip"></i> Pedidos</span>
 					</a>
 				</li>
 				<li>
-					<a ui-sref="supervisor_dashboard123123">
+					<a ui-sref="income_expenses">
 						<i class="icon-paper-clip"></i> Cajas y presupuesto</span>
 					</a>
 				</li>
@@ -78,11 +78,6 @@
 				<li>
 					<a ui-sref="supervisor_dashboard123123">
 						<i class="icon-paper-clip"></i> Compras y proveedores</span>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="income_expenses">
-						<i class="icon-paper-clip"></i> Ingresos y Egresos</span>
 					</a>
 				</li>
 				<li>
